# VenomSpecter

./: Makefile  README.md  ai.dart  context-menu.c  launcher.c  launcher.css  launcher.h  search.c  search.h  style.css  vaxp-panel  vaxp-panel.c
venom-desktop/: Makefile  icons.h  menu.c  menu.h  selection.c  venom-desktop-manager  venom-desktop-manager.c  venom-setbg  venom-setbg.c  wallpaper.c  wallpaper.h  اوامر مهمه
venom-desktop/docs/: WIDGET_DEVELOPMENT.md
venom-desktop/include/: icons.h  menu.h
venom-desktop/src/: filesystem.c  icons.c  main.c  menu.c  selection.c  venom-desktop-manager.c  venom-setbg.c
venom-dock/: Makefile  launcher.css  style.css  test.text  vaxp-dock  vaxp-panel  venom-launcher
venom-dock/app_launcher/: CMakeLists.txt  app_launcher.c  app_launcher.h  optimization_report.md
venom-dock/include/: launcher.h  pager.h
venom-dock/src/: launcher.c  pager.c  search.c  vaxp-panel.c
venom-dock/src/ui/: pager.c  (+4 more)
venom-launcher/: README.md  meson.build
venom-launcher/data/: meson.build  venom-launcher.desktop
venom-panel/: INTEGRATION_STATUS.md  Makefile  README.md  bluetooth-manager.c  bluetooth-manager.h  brightness-manager.c  brightness-manager.h  clock-widget.h  control-center.c  dbus_log.txt  dbus_service.c  nohup.out  notification-service.c  notification-service.h  run.sh  search-style.css  search.c  search.h  style.css  system-icons.c  system-icons.h  test.c  test1  test2  test2.c  test3  test3.c  test4  test4.c  test_dbus.py  venom-miasma_README.md  venom-panel  venom-panel-settings  venom-panel.c  wifi-manager.c  wifi-manager.h
(+96 files in other folders)
